--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>IntersectionObserverExample</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+<!-- add by cdn to fix for stackblitz-->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
